--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ h1 {
    *=============================================**/ }
   @media (max-width: 62.5em) {
     h1 {
-      font-size: 4rem; } }
+      font-size: 3rem; } }
 
 h2 {
   font-size: 7rem;
@@ -1488,6 +1488,43 @@ h2 {
     color: #333333; }
   .title-chapterTitle {
     text-align: center; }
+    .title-chapterTitle--c1 {
+      /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+      /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+      /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+      /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+      /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+      /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+      @media (max-width: 62.5em) {
+        .title-chapterTitle--c1 {
+          width: 100%;
+          text-align: center; } }
     .title-chapterTitle--c2 {
       text-align: left;
       width: 60%;
