--- a/scss/_topNav.scss
+++ b/scss/_topNav.scss
@@ -217,11 +217,18 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 3rem;
+
+    @include respond(break-1000) {
+      font-size: 1.5rem;
+    }
   }
 
   &-link {
     font-size: 2rem;
     margin-right: 2rem;
+    @include respond(break-1000) {
+      font-size: 1.5rem;
+    }
   }
 }
 
