3rd round of mobile touches 3

--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,8 @@ a {
    *=============================================**/ }
   @media (max-width: 62.5em) {
     .topNav-title--text {
-      font-size: 1.5rem; } }
+      font-size: 1.5rem;
+      text-align: center; } }
 
 .topNav-link {
   font-size: 2rem;
@@ -1953,39 +1954,7 @@ h2 {
     border-color: white;
     color: white;
     cursor: pointer;
-    transition: background-color 0.3s;
-    /**============================================
-   *             Mobile Small - 600
-@include respond(break-600) {}
-   *=============================================**/
-    /**============================================
-   *             Mobile Large - 850
-@include respond(break-850) {}
-   *=============================================**/
-    /**============================================
-   *                Tablet - 1000
-@include respond(break-1000) {}
-   *=============================================**/
-    /**============================================
-   *                Monitor Small - 1200
-   @include respond(break-1200) {}
-   *=============================================**/
-    /**============================================
-   *                Monitor Medium - 1400
-   @include respond(break-1400) {}
-   *=============================================**/
-    /**============================================
-   *                Larger than - 1400
-   @include respond(break-greater-1400) {}
-   *=============================================**/
-    /**============================================
-   *                Monitor Medium - 1400
-   @include respond(break-1600) {}
-   *=============================================**/
-    /**============================================
-   *                Telvision/Projector > 1800
-   @include respond(break-1800) {}
-   *=============================================**/ }
+    transition: background-color 0.3s; }
     .title-btn:hover {
       background-color: #494949; }
 
@@ -2100,7 +2069,42 @@ h2 {
   text-align: center; }
 
 .title-landing > h1 {
-  width: 30%; }
+  width: 30%;
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1400
+   @include respond(break-greater-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (max-width: 62.5em) {
+    .title-landing > h1 {
+      width: max-content; } }
 
 .title-chapterTitle--c1 {
   width: 100% !important; }
