--- a/css/style.css
+++ b/css/style.css
@@ -1905,7 +1905,8 @@ h2 {
       @media (max-width: 62.5em) {
         .title-chapterTitle--c6 {
           width: 80%;
-          text-align: center; } }
+          text-align: center;
+          font-size: 1.5rem; } }
   .title-authorName {
     font-size: 1.8rem;
     margin-top: 3rem;
