--- a/css/style.css
+++ b/css/style.css
@@ -2110,3 +2110,7 @@ h2 {
 
 .title-chapterTitle--c1 {
   width: 100% !important; }
+
+/**========================================================================
+ *                           TABLE OF CONTENTS 
+ *========================================================================**/
