--- a/templates/partials/c4.html
+++ b/templates/partials/c4.html
@@ -19,55 +19,9 @@
       <span class="title-authorName">By Maxa Millennial</span>
     </div>
     <div class="chapter-text">
-      <p class="text">
-        Your psychic waves do not destroy me any longer. They do not attack me
-        as they once did for now I sit sterile. My state has shifted into a
-        calloused mind, protected from all around me, with only the dry
-        splitting of my skin. I once believed I needed to remove myself from
-        your presence, but now I realize that movement was one too far. Simply,
-        I must remove myself, violently. I must embrace the barbs into my heart,
-        plunge them deeper as I look into your eyes, feel the final moment
-        between us. Only then will my transformation be complete. Only then will
-        I come back as the shadow I always was.
-      </p>
-      <p class="text">
-        But what does this mean for you and me? It means the guard will always
-        stand, vigilant they must remain, for the moment we fall your hidden
-        stiletto will pierce my very being, and I fear on that occasion all life
-        will be drained forever.
-      </p>
-      <p class="text">
-        Still, confusingly, I search for your motivations, and I search for my
-        responsibility in the mire of our battered conversations. Perhaps it was
-        my gaze, my moods, my stature, my facade of confidence, but the
-        grotesque pleasure you take in my failure burns the tethers that connect
-        us. Yet I still want to understand. I wonder who you are even as your
-        scope is set to kill.
-      </p>
-      <p class="text">
-        And who will win this sick game? I will, for my opponent does not lose
-        because they do not play. And after I bask in the victory I will
-        admonish myself alone on my pedestal. I will see myself for all it is
-        and I will see nothing. I'll claim that nothing and take it with me into
-        the ether, because I still remember you, and I still remember the
-        butcherings we once took part in, a butchering I became accustomed to, a
-        butchering you took pleasure in. Except, finally, us butchers have grown
-        older, and, while I sit here in pieces, your gore induced sculpture, you
-        will soon see the indivisible self. It won’t be yours, and you’ll wonder
-        if you ever had one at all.
-      </p>
-      <p class="text">
-        Of course then, unbethoughten to all of you, my return will not be felt
-        as the warm confidant it once was. It will be the dark sparrow, the
-        bright scream, the infinite terror, for you will not be able to escape
-        these prisons you've constructed. You will sit for all eternity asking
-        the questions that you pressed onto me as an eviscerator of self. And I
-        will have nothing to say for I’ve been dead forever.
-      </p>
-      <p class="text">
-        Come now, into my torture chamber, did you think this was just a ride
-        you would soon finish with a swift return to your placated life.
-      </p>
+      {% for chapterText in theFightToUndermine %}
+      <p class="text">{{chapterText.paragraph}}</p>
+      {% endfor %}
     </div>
   </div>
 </section>
