--- a/templates/partials/c3.html
+++ b/templates/partials/c3.html
@@ -15,6 +15,7 @@
       <span class="title-authorName">By Maxa Millennial</span>
     </div>
     <div class="chapter-text">
+      <!-- LOOP NJK-->
       {% for chapterText in egoDeath %}
       <p class="text">{{chapterText.paragraph}}</p>
       {% endfor %}
