--- a/scss/_chapterTemplate.scss
+++ b/scss/_chapterTemplate.scss
@@ -13,6 +13,7 @@ h2 {
   font-size: 7rem;
   font-weight: 300;
   text-transform: uppercase;
+  color: $color-white;
   @include respond(break-greater-1600) {
     font-size: 10rem;
   }
