--- a/templates/partials/c4.html
+++ b/templates/partials/c4.html
@@ -19,6 +19,7 @@
       <span class="title-authorName">By Maxa Millennial</span>
     </div>
     <div class="chapter-text">
+      <!-- LOOP NJK-->
       {% for chapterText in theFightToUndermine %}
       <p class="text">{{chapterText.paragraph}}</p>
       {% endfor %}
